@@ -2,9 +2,17 @@ PWIZ - A Packaging WIZard
 
 Purpose:
 
-PWIZ is a software tool, which should increase package quality and
-decrease amount of mechanical work in packaging process by processing
-mechanical steps in semi-automatic way.
+PWIZ is a software guiding through packaging process.
+
+Main goals:
+
+- Decrease amount of mechanical work in packaging process by
+processing mechanical steps in semi-automatic way.
+
+- Make possible package creating by inexperienced users.
+
+- Increase package quality.
+
 
 Packaging Wizard is written by Stanislav Brabec <sbrabec@suse.cz>.
 
@@ -13,10 +21,10 @@ Copyright (c) 2004 SuSE CR
 
 STATE
 
-In current state, it basically works. Primarilly it is tested on GNOME
-related stuff. See TODO for limitations, userdoc.txt for user
-documentation and develdoc.txt and autogenerated function documentation
-for developer documentation.
+In current state, it basically works and most of core functionallity
+is complete. Primarily it is tested on GNOME related stuff. See TODO
+for limitations, userdoc.txt for user documentation and develdoc.txt
+and autogenerated function documentation for developer documentation.
 
 RUNNING
 
@@ -26,6 +34,8 @@ descriptive.
 You have chance to use two styles of work - answer as best as you know
 or pres Enter, Enter, Enter and don't care. Both styles should be
 usable.
+
+Results will be found in ~/pwiz, answer cache in ~/.pwiz.
 
 WARNING
 
